cmake_minimum_required(VERSION 3.13)
project(CppPrimerPlus)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp main.cpp)
add_executable(chapt01 chapt01_chapt10/chapt01.cpp)
add_executable(chapt02 chapt01_chapt10/chapt02.cpp)
add_executable(chapt03 chapt01_chapt10/chapt03.cpp)
add_executable(chapt04 chapt01_chapt10/chapt04.cpp)
